	split wrappers and bsdconvmv
	from/NUL
	to/NUL
	inter/BSDCONV_INFO
4.6:
	from/MOZ18 -> from/UAO241
	to/UAO241

4.5:
	from/ANSI-CONTROL
	from/BSDCONV_LOG
	from/SKIP
	inter/AMBIGUOUS-PAD
	inter/BIG5-DEFRAG
	to/ANSI-CONTROL
	to/ASCII-HTML-INFO
	to/BSDCONV_LOG
	to/BSDCONV_RAW
	verify SUBROUTINE in inter phases

4.4:
	Add to/RAW
	fix bug in CNS11643 conversion
	fix bug in UTF-8 decoding

4.3:
	Enhance table builder

4.0:
	Allow using '|' to do re-conversion
	New design of operation mode
	Add bsdconvmv tool

3.0:
	Support multiple inter-phase

2.0:
	from/ASCII-NAMED-HTMLENTITY

1.7:
	Add Perl wrapper

1.0:
	Add PHP wrapper

0.6:
	Support various type of operation mode

0.5:
	Support alias

0.3:
	Support callback in codecs

0.2:
	Make hibernating works (for multiple-cycle conversion)	

0.1:
	First tag, conversion format: from:inter:to