@@ -33,6 +33,7 @@ TODO_CODECS_BASIC_TABLE+=from/UTF-32BE
 TODO_CODECS_BASIC_TABLE+=from/UTF-32LE
 TODO_CODECS_BASIC_TABLE+=from/UTF-8
 TODO_CODECS_BASIC_TABLE+=inter/AMBIGUOUS-PAD
+TODO_CODECS_BASIC_TABLE+=inter/AMBIGUOUS-UNPAD
 TODO_CODECS_BASIC_TABLE+=inter/BIG5-DEFRAG
 TODO_CODECS_BASIC_TABLE+=inter/FROM_ALIAS
 TODO_CODECS_BASIC_TABLE+=inter/FULL
@@ -112,6 +113,7 @@ TODO_CODECS_BASIC_CALLBACK+=from/UTF-32BE
 TODO_CODECS_BASIC_CALLBACK+=from/UTF-32LE
 TODO_CODECS_BASIC_CALLBACK+=from/UTF-8
 TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-PAD
+TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-UNPAD
 TODO_CODECS_BASIC_CALLBACK+=inter/BIG5-DEFRAG
 TODO_CODECS_BASIC_CALLBACK+=inter/BSDCONV_INFO
 TODO_CODECS_BASIC_CALLBACK+=to/3F
